--- a/firebase.json
+++ b/firebase.json
@@ -7,9 +7,11 @@
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
-    ]
+    ],
+    "source": "functions"
   },
   "hosting": {
+    "site": "phuoclv",
     "public": "build",
     "ignore": [
       "firebase.json",
