--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.3.0",
-    "firebase": "^8.1.1",
+    "firebase": "^8.2.1",
+    "firebase-functions": "^3.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
